Fixing grid-view cropped on group view

--- a/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.ui.theme/public/css/custom-desktop.css
+++ b/components/device-mgt/org.wso2.carbon.device.mgt.ui/src/main/resources/jaggeryapps/devicemgt/app/units/cdmf.unit.ui.theme/public/css/custom-desktop.css
@@ -6547,7 +6547,7 @@ select > option:hover {
 
 @media (min-width: 1200px){
     table tbody tr {
-        width: 14% !important;
+        width: 18% !important;
     }
     .table .fw-stack{
         font-size: 1.2vw;
@@ -6556,7 +6556,7 @@ select > option:hover {
 
 @media (min-width: 1500px){
     table tbody tr {
-        width: 10% !important;
+        width: 14% !important;
     }
     .table .fw-stack{
         font-size: 0.8vw;
